/*
 * Copyright 2020 Accenture Global Solutions Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = 'proto3';
package trac.metadata;

option java_package = "com.accenture.trac.metadata";
option java_multiple_files = true;

import "trac/metadata/object_id.proto";
import "trac/metadata/type.proto";


message FileDefinition {

  string name = 1;
  string extension = 2;
  string mimeType = 3;
  uint64 size = 4;

  TagSelector storageId = 5;
  string dataItem = 6;
}
